
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int END ;
 int exit (int) ;
 int fputs (char*,int ) ;
 int memcmp (int *,int ,int) ;
 scalar_t__ recv (int,int *,int,int ) ;
 int stdout ;

int recv_bfcc(int sock, u_char *buff, int size) {
    int len = 0;


    while(len < size) {
        if(recv(sock, buff + len, 1, 0) <= 0) {
            fputs("\nError: connection interrupted\n\n", stdout);
            exit(1);
        }
        len++;
        if(!memcmp(buff + len - 4, END, 4)) break;
    }

    if(len == size) {
        fputs("\nError: command too long\n\n", stdout);
        exit(1);
    }

    return(len);
}
